src/components/card/card.scss
@import './../../theme/variables';

.card {
    box-sizing: border-box;
    max-width: 380px;
    width: 100%;
    padding: 40px 0;

    @media #{$media__tablet} {
        padding: 40px 30px 30px;

        background: #FFFFFF;
        border: 1px solid $color__card-border;
        border-radius: 4px;
        box-shadow: $shadow__dark;
    }
}

